// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sql view matches snapshot 1`] = `
<div
  className="query-view app-view"
>
  <ColumnTree
    columnMetadataLoading={true}
    defaultSchema="druid"
    getParsedQuery={[Function]}
    onQueryStringChange={[Function]}
  />
  <t
    customClassName=""
    onDragEnd={null}
    onDragStart={null}
    onSecondaryPaneSizeChange={[Function]}
    percentage={true}
    primaryIndex={0}
    primaryMinSize={30}
    secondaryInitialSize={60}
    secondaryMinSize={30}
    vertical={true}
  >
    <div
      className="control-pane"
    >
      <QueryInput
        currentSchema="druid"
        onQueryStringChange={[Function]}
        queryString="test"
        runeMode={false}
      />
      <div
        className="control-bar"
      >
        <HotkeysTarget(RunButton)
          loading={false}
          onEditContext={[Function]}
          onExplain={[Function]}
          onHistory={[Function]}
          onPrettier={[Function]}
          onQueryContextChange={[Function]}
          onRun={[Function]}
          queryContext={Object {}}
          runeMode={false}
        />
        <Blueprint3.Tooltip
          content="Automatically run queries when modified via helper action menus."
          hoverCloseDelay={0}
          hoverOpenDelay={800}
          transitionDuration={100}
        >
          <Blueprint3.Switch
            checked={true}
            className="auto-run"
            label="Auto run"
            onChange={[Function]}
          />
        </Blueprint3.Tooltip>
        <Blueprint3.Tooltip
          content="Automatically wrap the query with a limit to protect against queries with very large result sets."
          hoverCloseDelay={0}
          hoverOpenDelay={800}
          transitionDuration={100}
        >
          <Blueprint3.Switch
            checked={true}
            className="smart-query-limit"
            label="Smart query limit"
            onChange={[Function]}
          />
        </Blueprint3.Tooltip>
      </div>
    </div>
    <Memo(QueryOutput)
      loading={false}
      onQueryChange={[Function]}
      runeMode={false}
    />
  </t>
</div>
`;

exports[`sql view matches snapshot with query 1`] = `
<div
  className="query-view app-view"
>
  <ColumnTree
    columnMetadataLoading={true}
    defaultSchema="druid"
    getParsedQuery={[Function]}
    onQueryStringChange={[Function]}
  />
  <t
    customClassName=""
    onDragEnd={null}
    onDragStart={null}
    onSecondaryPaneSizeChange={[Function]}
    percentage={true}
    primaryIndex={0}
    primaryMinSize={30}
    secondaryInitialSize={60}
    secondaryMinSize={30}
    vertical={true}
  >
    <div
      className="control-pane"
    >
      <QueryInput
        currentSchema="druid"
        onQueryStringChange={[Function]}
        queryString="SELECT +3"
        runeMode={false}
      />
      <div
        className="control-bar"
      >
        <HotkeysTarget(RunButton)
          loading={false}
          onEditContext={[Function]}
          onExplain={[Function]}
          onHistory={[Function]}
          onPrettier={[Function]}
          onQueryContextChange={[Function]}
          onRun={[Function]}
          queryContext={Object {}}
          runeMode={false}
        />
        <Blueprint3.Tooltip
          content="Automatically run queries when modified via helper action menus."
          hoverCloseDelay={0}
          hoverOpenDelay={800}
          transitionDuration={100}
        >
          <Blueprint3.Switch
            checked={true}
            className="auto-run"
            label="Auto run"
            onChange={[Function]}
          />
        </Blueprint3.Tooltip>
        <Blueprint3.Tooltip
          content="Automatically wrap the query with a limit to protect against queries with very large result sets."
          hoverCloseDelay={0}
          hoverOpenDelay={800}
          transitionDuration={100}
        >
          <Blueprint3.Switch
            checked={true}
            className="smart-query-limit"
            label="Smart query limit"
            onChange={[Function]}
          />
        </Blueprint3.Tooltip>
      </div>
    </div>
    <Memo(QueryOutput)
      loading={false}
      onQueryChange={[Function]}
      runeMode={false}
    />
  </t>
</div>
`;
